--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </ul>
             <div class="copyright">
                 <ul class="menu">
-                    <li>Associació Geeks.CAT - CIF: G01765429</li>
+                    <li>Associació Geeks.CAT - NIF: G01765429</li>
                     <li>Disseny d'<a href="http://html5up.net">HTML5 UP</a></li>
                 </ul>
             </div>
